Summary of important user-visible changes for econometrics 1.1.0:
-------------------------------------------------------------------

 ** Calls to deprecated functions have been replaced for compatibility
    with newer octave versions.