@@ -1,22 +1,18 @@
 econometrics >> Econometrics
 Econometrics
- average_moments delta_method 
- gmm_estimate gmm_example gmm_obj gmm_results gmm_variance gmm_variance_inefficient
- mle_estimate mle_example mle_obj mle_results mle_variance
+ delta_method
+ gmm_estimate gmm_example gmm_results gmm_variance gmm_variance_inefficient
+ mle_estimate mle_example mle_obj mle_results
  parameterize prettyprint scale_data unscale_parameters
  nls_estimate nls_obj
  mle_obj_nodes
  nls_example
- nls_obj_nodes
  poisson
  poisson_moments
  prettyprint_c
- sum_moments_nodes
  kernel_density
  kernel_density_cvscore
- kernel_density_nodes
  kernel_example
  kernel_optimal_bandwidth
  kernel_regression
  kernel_regression_cvscore
- kernel_regression_nodes
