@@ -1,5 +1,11 @@
 Summary of important user-visible changes for econometrics 1.1.0:
 -------------------------------------------------------------------
 
+ ** The following functions have been made private:
+
+      average_moments         gmm_obj           kernel_density_nodes
+      __kernel_epanechnikov   __kernel_normal   kernel_regression_nodes
+      mle_variance            nls_obj_nodes     sum_moments_nodes
+
  ** Calls to deprecated functions have been replaced for compatibility
     with newer octave versions.
